--- a/website.html
+++ b/website.html
@@ -12,7 +12,7 @@
 
     <header>
       <h1>Matt Zhang</h1>
-      <p>Hey! I'm Matt - a student-in-training trying to learn a bit about everything before heading off to study SE at UW in the fall. </p>
+      <p>Hey! I'm Matt - an uWaterloo SoftEng student trying to learn how to talk to computers. </p>
       <br>
       <p>Wish me luck!</p>
     </header>
@@ -28,16 +28,12 @@
     <div class="parallax"></div>
 
     <footer>
-      <h2>Contact me!</h2>
-      <p>Seriously! <br>Please tell me how to make my stuff better!</p>
+      <h2>Contact</h2>
+      <p>Here's my info if you want to talk to me for some reason!</p>
       <table>
         <tr>
           <td>Github:</td>
-          <td>zugzhang</td>
-        </tr>
-        <tr>
-          <td>Discord:</td>
-          <td>Catalclyst#4155</td>
+          <td>mzhang</td>
         </tr>
         <tr>
           <td>Email:</td>
