working email box

--- a/index.html
+++ b/index.html
@@ -22,14 +22,41 @@
     <div class="blank"></div>
 
     <section>
-      <p>Here's what I've been working on: </p>
+      Email me with this box!
+      <form
+      action="https://formspree.io/f/mvovwglg"
+      method="POST">
+      <table>
+        <tr>
+            <td>Your email:</td>
+            <td><input type="text" name="_replyto"></td>
+        </tr>
+        <tr>
+            <td>Your message:</td>
+            <td><textarea name="message"></textarea></td>
+
+        </tr>
+      </table>
+      <br />
+
+
+
+      <button type="submit">Send</button>
+    </form>
     </section>
+
+
+
+    <!-- <section>
+      <p>Here's what I've been working on: </p>
+    </section> -->
 
     <div class="parallax"></div>
 
     <footer>
       <h2>Contact</h2>
       <p>Here's my info if you want to talk to me for some reason!</p>
+
       <table>
         <tr>
           <td>Github:</td>
