--- a/index.html
+++ b/index.html
@@ -13,13 +13,25 @@
     <header>
       <h1>Matt Zhang</h1>
       <p>Hey! I'm Matt - an uWaterloo SoftEng student trying to learn how to talk to computers. </p>
-      <br>
-      <p>Wish me luck!</p>
     </header>
 
     <div class="parallax"></div>
 
     <div class="blank"></div>
+
+    <section>
+      <h3>Qualifications</h3>
+      <ul>
+        <li>Can follow Youtube tutorials</li>
+        <li>Can use Stack Overflow search function</li>
+        <li>Above average luck with Google</li>
+        <li>Can make carbonated water for everyone</li>
+      </ul>
+    </section>
+    <div class="parallax"></div>
+
+    <div class="blank"></div>
+
 
     <section>
       Email me with this box!
@@ -38,9 +50,6 @@
         </tr>
       </table>
       <br />
-
-
-
       <button type="submit">Send</button>
     </form>
     </section>
