changed my mind about formspree. using mailto now.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="blank"></div>
 
 
-    <section>
+    <!-- <section>
       Email me with this box!
       <form
       action="https://formspree.io/f/mvovwglg"
@@ -52,21 +52,15 @@
       <br />
       <button type="submit">Send</button>
     </form>
-    </section>
-
-
-
-    <!-- <section>
-      <p>Here's what I've been working on: </p>
     </section> -->
 
-    <div class="parallax"></div>
-
     <footer>
-      <h2>Contact</h2>
-      <p>Here's my info if you want to talk to me for some reason!</p>
-
-      <table>
+      <h3>Contact</h3>
+      <ul>
+        <li><a href="https://github.com/mzhang">GitHub</a></li>
+        <li><a href="mailto:zugzhang@gmail.com">email</a></li>
+      </ul>
+      <!-- <table>
         <tr>
           <td>Github:</td>
           <td>mzhang</td>
@@ -75,7 +69,7 @@
           <td>Email:</td>
           <td>zugzhang@gmail.com</td>
         </tr>
-      </table>
+      </table> -->
     </footer>
 
 
