--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <title>Matt Zhang</title>
     <link rel="stylesheet" href="./assets/style.css" type="text/css">
-
+    <link rel="shortcut icon" type="image/jpg" href="./assets/favicon.ico"/>
   </head>
   <body>
 
@@ -16,7 +16,6 @@
     </header>
 
     <div class="parallax"></div>
-
     <div class="blank"></div>
 
     <section>
@@ -28,8 +27,8 @@
         <li>Can make carbonated water for everyone</li>
       </ul>
     </section>
-    <div class="parallax"></div>
 
+    <div class="parallax"></div>
     <div class="blank"></div>
 
 
