changed to m@zhang.software email

--- a/index.html
+++ b/index.html
@@ -31,33 +31,11 @@
     <div class="parallax"></div>
     <div class="blank"></div>
 
-
-    <!-- <section>
-      Email me with this box!
-      <form
-      action="https://formspree.io/f/mvovwglg"
-      method="POST">
-      <table>
-        <tr>
-            <td>Your email:</td>
-            <td><input type="text" name="_replyto"></td>
-        </tr>
-        <tr>
-            <td>Your message:</td>
-            <td><textarea name="message"></textarea></td>
-
-        </tr>
-      </table>
-      <br />
-      <button type="submit">Send</button>
-    </form>
-    </section> -->
-
     <footer>
       <h3>Contact</h3>
       <ul>
         <li><a href="https://github.com/mzhang">GitHub</a></li>
-        <li><a href="mailto:zugzhang@gmail.com">email</a></li>
+        <li><a href="mailto:m@zhang.software">Email</a></li>
       </ul>
       <!-- <table>
         <tr>
@@ -70,7 +48,5 @@
         </tr>
       </table> -->
     </footer>
-
-
   </body>
 </html>
