removed outdated assets. changed hyperlink colors. added hangman link

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <header>
       <h1>Matt Zhang</h1>
       <p>Hey! I'm Matt - an uWaterloo SoftEng student trying to learn how to talk to computers. </p>
+      <p>For now, wanna play some <a href="hangman/index.html">hangman</a>?</p>
     </header>
 
     <div class="parallax"></div>
@@ -38,16 +39,6 @@
         <li><a href="mailto:m@zhang.software">Email</a></li>
       </ul>
       <br>
-      <!-- <table>
-        <tr>
-          <td>Github:</td>
-          <td>mzhang</td>
-        </tr>
-        <tr>
-          <td>Email:</td>
-          <td>zugzhang@gmail.com</td>
-        </tr>
-      </table> -->
     </footer>
   </body>
 </html>
