--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
       <h1>Matt Zhang</h1>
       <p>Hey! I'm Matt - an uWaterloo SoftEng student trying to learn how to talk to computers. </p>
-      <p>For now, wanna play some <a href="hangman/index.html">hangman</a>?</p>
+      <p>For now, wanna play some <a href="https://zhang.software/hangman/">hangman</a>?</p>
     </header>
 
     <div class="parallax"></div>
