basic layout finished

--- a/index.html
+++ b/index.html
@@ -13,15 +13,14 @@
 
   <body class="container pt-5">
 
-    <section><div class="jumbotron jumbotron-fluid bg-light" style="margin-top:20%; padding-left: 5%;">
+    <section style="padding-top: 25%;"><div class="jumbotron-fluid bg-light" style="padding: 10% 10% 3% 10%;">
       <div class="container">
         <h1 class="display-4">Matt Zhang</h1>
         <br class="my-4">
-        <p class="lead">Hey! I'm Matt - an uWaterloo SoftEng student trying to learn how to talk to computers. </p>
-        <p>For now, wanna play some <a class="btn btn-primary btn-sm" href="https://zhang.software/hangman/">hangman</a> ?</p>
+        <p id="banner-bottom" class="lead">Hey! I'm Matt - an uWaterloo SoftEng student trying to learn how to talk to computers. </p>
+        <!-- <p>For now, wanna play some <a class="btn btn-primary btn-sm" href="https://zhang.software/hangman/">hangman</a> ?</p> -->
       </div>
     </div></section>
-    
     
     <nav class="navbar justify-content-center sticky-top navbar-light bg-light">
       <ul class="nav nav-pills">
@@ -85,6 +84,11 @@
           </div>
         </div>
       </div>
+    </div></section>
+
+    <section><div class="text-center container">
+      <a class="btn btn-primary btn-lg" href="https://github.com/mzhang">GitHub</a>
+      <a class="btn btn-primary btn-lg" href="mailto:m@zhang.software">Email</a>
     </div></section>
 
 
