--- a/index.html
+++ b/index.html
@@ -37,6 +37,49 @@
     </nav>
 
     <section>
+      <div class="card mb-3" style="max-width: 100%;">
+        <div class="row no-gutters">
+          <div class="col-md-4">
+            <img class="card-img-top" style="height: 100%px; width: 100%; display: block;" src="./assets/970.jpg">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-sm btn-outline-secondary">GitHub</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                </div>
+                <small class="text-muted">9 mins</small>
+              </div>
+            </div>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="card mb-3" style="max-width: 100%;">
+        <div class="row no-gutters">
+          <div class="col-md-8">
+            <div class="card-body">
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-sm btn-outline-secondary">GitHub</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                </div>
+                <small class="text-muted">9 mins</small>
+              </div>
+            </div>
+        </div>
+        
+        <div class="col-md-4">
+          <img class="card-img-top" style="height: 100%px; width: 100%; display: block;" src="./assets/970.jpg">
+        </div>
+      </div>
+    </section>
+
+    <section>
       <div id="projects" class="container" style="width: 80%;">
       <div class="row">
         <div class="col-md-4">
