added project contents

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
           <a class="nav-link active" href="#projects">Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Resume</a>
+          <a class="nav-link" href="#minigames">Minigames</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Minigames</a>
+          <a class="nav-link" href="#resume">Resume</a>
         </li>
       </ul>
     </nav>
@@ -46,42 +46,44 @@
           </div>
           <div class="col-md-8">
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5 class="card-title">97.0FM</h5>
+              <p class="card-text">A discord bot that helps you out with figuring out what music to play!</p>
+              <p>Ever been in a call where noone knows want song they want to hear your discord bot play? Or maybe noone is brave enough to bear the responsibilities of choosing for the squad? Just do .s [song title]!</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">GitHub</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="https://github.com/mzhang/97.0FM/">GitHub</a></button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="https://discord.com/api/oauth2/authorize?client_id=773339364444209174&permissions=8&scope=bot">Invite to Discord!</a></button>
                 </div>
-                <small class="text-muted">9 mins</small>
+                <small class="text-muted">Python, Discord.py</small>
               </div>
             </div>
         </div>
       </div>
     </section>
-    
     <section>
       <div class="card mb-3" style="max-width: 100%;">
         <div class="row no-gutters">
           <div class="col-md-8">
             <div class="card-body">
+              <h5 class="card-title">Clean Timer</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">GitHub</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="https://github.com/mzhang/cleanTimer">GitHub</a></button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="https://play.google.com/store/apps/details?id=com.mzhang.cleantimer">Google Play</a></button>
                 </div>
-                <small class="text-muted">9 mins</small>
+                <small class="text-muted">Java</small>
               </div>
             </div>
         </div>
         
         <div class="col-md-4">
-          <img class="card-img-top" style="height: 100%px; width: 100%; display: block;" src="./assets/970.jpg">
+          <img class="card-img-top" style="height: 100%px; width: 100%; display: block;" src="./assets/cleantimer.png">
         </div>
       </div>
     </section>
 
-    <section id="projects">
+    <!-- <section id="projects">
       <div class="card mb-3" style="max-width: 100%;">
         <div class="row no-gutters">
           <div class="col-md-4">
@@ -100,20 +102,20 @@
             </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <section>
       <div class="container" style="width: 80%;">
       <div class="row">
         <div class="col-md-6">
           <div class="card mb-4 box-shadow">
-            <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22288%22%20height%3D%22225%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20288%20225%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1765f08786b%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A14pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1765f08786b%22%3E%3Crect%20width%3D%22288%22%20height%3D%22225%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2296.828125%22%20y%3D%22118.8%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true">
+            <img class="card-img-top" style="height: 100%; width: 100%; display: block; background-size: cover;" src="./assets/hangman.jpg">
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Try your best to beat my Hangman bot. </br> It won't be easy!</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">GitHub</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="https://zhang.software/hangman">Play</a></button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="https://github.com/mzhang/impossibleHangman">GitHub</a></button>
                 </div>
                 <small class="text-muted">9 mins</small>
               </div>
@@ -122,13 +124,13 @@
         </div>
         <div class="col-md-6">
           <div class="card mb-4 box-shadow">
-            <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22288%22%20height%3D%22225%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20288%20225%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1765f08786b%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A14pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1765f08786b%22%3E%3Crect%20width%3D%22288%22%20height%3D%22225%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2296.828125%22%20y%3D%22118.8%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true">
+            <img class="card-img-top" style="height: 100%; width: 100%; display: block; background-size: cover;" src="./assets/snake.jpg">
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Snake - but the controls are... Different. </br> Hope you type accurately!</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="https://zhang.software/snake">Play</a></button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="https://github.com/mzhang/snake">GitHub</a></button>
                 </div>
                 <small class="text-muted">9 mins</small>
               </div>
