--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE HTML>
 
 <html>
-  <head>
+  <head> 
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <title>Matt Zhang</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
+
     <link rel="stylesheet" href="./assets/style.css" type="text/css">
     <link rel="shortcut icon" type="image/jpg" href="./assets/favicon.ico"/>
   </head>
 
-  <body class="container">
+  <body class="container dark-mode">
+    <button style="position: fixed;" onclick="myFunction()">Toggle dark mode</button>
 
-    <section style="padding-top: 40%;"><div class="jumbotron-fluid bg-white" style="padding: 10% 10% 3% 5%;">
+    <section style="padding-top: 40%;"><div class="jumbotron-fluid bg-transparent" style="padding: 10% 10% 3% 5%;">
       <div class="container">
         <h1 class="display-4">Matt Zhang</h1>
         <br class="my-4">
@@ -22,7 +26,7 @@
       </div>
     </div></section>
     
-    <nav class="navbar justify-content-center sticky-top navbar-light bg-white">
+    <nav class="navbar justify-content-center sticky-top navbar-light bg-transparent">
       <ul class="nav nav-pills">
         <li class="nav-item">
           <a class="nav-link active" href="#projects">Projects</a>
@@ -39,7 +43,7 @@
     <div style="padding: 10%;"></div>
 
     <section id="projects">
-      <div class="card mb-3" style="max-width: 100%;">
+      <div class="card mb-3 bg-transparent" style="max-width: 100%;">
         <div class="row no-gutters">
           <div class="col-md-4">
             <img class="card-img-top" style="height: 100%px; width: 100%; display: block;" src="./assets/970.jpg">
@@ -61,7 +65,7 @@
       </div>
     </section>
     <section>
-      <div class="card mb-3" style="max-width: 100%;">
+      <div class="card mb-3 bg-transparent" style="max-width: 100%;">
         <div class="row no-gutters">
           <div class="col-md-8">
             <div class="card-body">
@@ -108,7 +112,7 @@
       <div class="container" style="width: 80%;">
       <div class="row">
         <div class="col-md-6">
-          <div class="card mb-4 box-shadow">
+          <div class="card mb-4 bg-transparent">
             <img class="card-img-top" style="height: 100%; width: 100%; display: block; background-size: cover;" src="./assets/hangman.jpg">
             <div class="card-body">
               <p class="card-text">Try your best to beat my Hangman bot. </br> It won't be easy!</p>
@@ -123,7 +127,7 @@
           </div>
         </div>
         <div class="col-md-6">
-          <div class="card mb-4 box-shadow">
+          <div class="card mb-4 bg-transparent">
             <img class="card-img-top" style="height: 100%; width: 100%; display: block; background-size: cover;" src="./assets/snake.jpg">
             <div class="card-body">
               <p class="card-text">Snake - but the controls are... Different. </br> Hope you type accurately!</p>
@@ -140,7 +144,7 @@
     </div></section>
 
     <section id="resume">
-      <div class="card mb-3 text-center" style="max-width: 100%;">
+      <div class="card mb-3 text-center bg-transparent" style="max-width: 100%;">
         <div class="row no-gutters">
           <div class="col-md-12">
             <div class="card-body">
@@ -151,17 +155,13 @@
         </div>
       </div>
     </section>
-    <button onclick="myFunction()">Toggle dark mode</button>
+
     <script>
-      $('.switch').click(()=>{
-    $([".light [class*='-light']", ".dark [class*='-dark']"]).each((i,ele)=>{
-        $(ele).toggleClass('bg-light bg-dark')
-        $(ele).toggleClass('text-light text-dark')
-        $(ele).toggleClass('navbar-light navbar-dark')
-    })
-    // toggle body class selector
-    $('body').toggleClass('light dark')
-})
-      </script>
+      function myFunction() {
+        var element = document.body;
+        element.classList.toggle("dark-mode");
+}
+    </script>
+
   </body>
 </html>
