day/night toggle functinal

--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
         document.body.classList.toggle("dark-mode");
         let cards = document.querySelectorAll("div.card")
         cards.forEach(element => element.classList.toggle("border-light"))
+        document.getElementById("navBar").classList.toggle("dark-mode");
 }
     </script>
 
