--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
       </div>
     </div></section>
     
-
     <nav id="navBar" class="navbar justify-content-center sticky-top navbar-light">
       <ul class="nav nav-pills">
         <li class="nav-item">
@@ -37,12 +36,13 @@
         <li class="nav-item">
           <a class="nav-link" href="#resume">Resume</a>
         </li>
+        <li class="nav-item">
+          <button class="btn bmd-btn-fab navbar-btn btn-primary" onclick="toggleNight()" id="toggleButtonText">🌙</div></button>
+        </li>
       </ul>
     </nav>
 
     
-    <section class="text-center"><button style="width:4em; height: 4em; padding: 0%;" class="btn bmd-btn-fab rounded-circle btn-primary" onclick="toggleNight()"><h2 id="toggleButtonText">🌙</h2></div></button></section>
-
     <section id="projects">
       <div class="card mb-3 bg-transparent" style="max-width: 100%;">
         <div class="row no-gutters">
