changed hero animations. added parallax

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <link rel="shortcut icon" type="image/jpg" href="./assets/favicon.ico"/>
     
   </head>
-
+  
   <body class="container">
-    <section style="padding-top: 40%;" data-aos="fade-up-right"><div class="jumbotron-fluid" style="padding: 10% 10% 3% 5%;">
+    <section style="padding-top: 40%;" data-aos="fade-right" data-aos-duration="2000"><div class="jumbotron-fluid" style="padding: 10% 10% 3% 5%;">
       <div class="container">
         <h1 class="display-4">Matt Zhang</h1>
         <br class="my-4">
@@ -24,7 +24,7 @@
       </div>
     </div></section>
     
-    <nav id="navBar" data-aos="fade-up-right" class="navbar justify-content-center sticky-top navbar-light">
+    <nav id="navBar" data-aos="fade-left" class="navbar justify-content-center sticky-top navbar-light">
       <ul class="nav nav-pills">
         <li class="nav-item">
           <a class="nav-link active" href="#projects">Projects</a>
@@ -144,7 +144,7 @@
         </div>
     </div></section>
 
-    <section id="resume" data-aos="fade-left" class="aos-init aos-animate">
+    <section id="resume" data-aos="fade-left" style="padding-bottom:15%;">
       <div class="card mb-3 text-center bg-transparent" style="max-width: 100%;">
         <div class="row no-gutters">
           <div class="col-md-12">
@@ -156,6 +156,9 @@
         </div>
       </div>
     </section>
+
+
+    <section class="parallax"></section>
 
     <script>
       let isDark = true;
