changed vertical units to vh

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   
   <body class="container">
-    <section style="padding-top: 40%;" data-aos="fade-right" data-aos-duration="2000"><div class="jumbotron-fluid" style="padding: 10% 10% 3% 5%;">
+    <section style="padding-top: 40vh;" data-aos="fade-right" data-aos-duration="2000"><div class="jumbotron-fluid" style="padding: 10% 10% 3% 5%;">
       <div class="container">
         <h1 class="display-4">Matt Zhang</h1>
         <br class="my-4">
