disabled aos on mobile

--- a/index.html
+++ b/index.html
@@ -176,7 +176,8 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init({duration: 1500,
-        mirror: true});
+        mirror: true,
+        disable: 'mobile'});
     </script>
     
   </body>
