updated resume. moved to main directory

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <div class="row no-gutters">
           <div class="col-md-12">
             <div class="card-body">
-              <p class="card-title">Since you've scrolled this far, please take a look at my <a class="btn btn-primary btn-xs" href="/assets/resume.pdf" download>resume</a> !</p>
+              <p class="card-title">Since you've scrolled this far, please take a look at my <a class="btn btn-primary btn-xs" href="/resume.pdf" download>resume</a> !</p>
               Or check out my <a class="btn btn-primary btn-xs" href="https://github.com/mzhang">GitHub</a>?
               Or maybe <a class="btn btn-primary btn-xs" href="mailto:m@zhang.software">Email</a> me?
             </div>
