--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
         </div>
       </div>
     </section> -->
-
-    <section id="minigames">
+    <section  class="text-center">
+      <h2 id="minigames">Javascript Minigames</h2><br><br>
       <div class="container" style="width: 80%;">
       <div class="row">
         <div class="col-md-6" data-aos="fade-right" >
@@ -176,6 +176,7 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init({duration: 1500,
+        offset:200,
         mirror: true,
         disable: 'mobile'});
     </script>
